# uniclipboard-desktop

./: .env.example  .gitattributes  .gitignore  .mcp.json  .prettierignore  .windsurfrules  AGENTS.md  CLAUDE.md  README.md  README_EN.md  README_ZH.md  codecov.yml  conductor.json  eslint.config.js  findings.md  index.html  monorepo.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  progress.md  tailwind.config.js  task_plan.md  vite.config.ts
src-tauri/: AGENTS.md  Cargo.toml  Makefile  config.toml  device_id.txt  tauri.conf.json  uniclipboard.db
src-tauri/capabilities/: default.json
src-tauri/crates/uc-app/: AGENTS.md  Cargo.toml  README.md
src-tauri/crates/uc-app/src/: app_paths.rs  builder.rs  deps.md  deps.rs  lib.rs  ports.rs  usecase_factory.rs
src-tauri/crates/uc-app/tests/: app_construction_test.rs  app_lifecycle_coordinator_test.rs  app_lifecycle_status_test.rs  capture_clipboard_regression.rs  copy_from_history_tests.rs  phase2_integration_test.rs  setup_flow_integration_test.rs  setup_flow_test.rs  snapshot_cache_integration_test.rs  stress_test.rs
src-tauri/crates/uc-clipboard-probe/: Cargo.toml  README.md
src-tauri/crates/uc-clipboard-probe/src/: main.rs
src-tauri/crates/uc-core/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-core/src/: decision.rs  lib.rs
src-tauri/crates/uc-core/tests/: platform_clipboard_port.rs
src-tauri/crates/uc-infra/: AGENTS.md  Cargo.toml  Makefile
src-tauri/crates/uc-infra/src/: lib.rs  onboarding_state.rs  schema.rs  setup_status.rs
src-tauri/crates/uc-infra/tests/: blob_materializer_test.rs  blob_repo_test.rs  clipboard_materializer_test.rs
src-tauri/crates/uc-network/: Cargo.toml
src-tauri/crates/uc-network/src/: codec.rs  lib.rs  pairing.rs  pin_hash.rs  swarm.rs  transport.rs
src-tauri/crates/uc-platform/: AGENTS.md  Cargo.toml
src-tauri/crates/uc-platform/src/: app_dirs.rs  bootstrap.rs  capability.rs  file_keyring.rs  file_secure_storage.rs  identity_store.rs  key_scope.rs  keyring.rs  lib.rs  net_utils.rs  secure_storage.rs  system_secure_storage.rs
src-tauri/crates/uc-platform/tests/: blob_store_test.rs  runtime_test.rs
src-tauri/crates/uc-tauri/: AGENTS.md  Cargo.toml  README.md  device_id.txt
src-tauri/crates/uc-tauri/src/: lib.rs  protocol.rs
src-tauri/crates/uc-tauri/tests/: bootstrap_integration_test.rs  channel_send_error_handling.rs  commands_test.rs  identifier_consistency.rs  integration_clipboard_capture.rs  integration_settings.rs  sentry_tracing_integration.rs  sentry_verify.rs  tracing_verification.rs  usecases_accessor_test.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-03-16-030020_create_clipboard_records/: down.sql  up.sql
src-tauri/migrations/2025-03-22-153425_add_content_hash_to_clipboard_records/: down.sql  up.sql
src-tauri/migrations/2025-03-27-114951_add_active_time_to_clipboard_records/: down.sql  up.sql
src-tauri/migrations/2025-03-27-120125_modify_file_paths_to_nullable/: down.sql  up.sql
src-tauri/migrations/2025-03-29-034219_add_content_size_to_clipboard_records/: down.sql  up.sql
src-tauri/migrations/2025-03-29-064841_add_alias_and_platform_to_device/: down.sql  up.sql
src-tauri/migrations/2025-03-30-135437_add_extra_to_clipbaord_record/: down.sql  up.sql
src-tauri/migrations/2025-12-31-000000_add_p2p_fields_to_devices/: down.sql  up.sql
src-tauri/src/: commands.rs  config.rs  connection.rs  context.rs  error.rs  lib.rs  main.rs  message.rs  onboarding.rs  record_manager.rs  schema.rs  setting.rs  uni_clipboard.rs
src-tauri/src-legacy/: schema.rs
src-tauri/src-legacy/api/: encryption.rs  event.rs  mod.rs  onboarding.rs  setting.rs
src-tauri/src-legacy/application/: content_detector_service.rs  device_service.rs  file_service.rs  mod.rs
src-tauri/src-legacy/config/: mod.rs  setting.rs  utils.rs
src-tauri/src-legacy/domain/: network.rs
src-tauri/src-legacy/infrastructure/clipboard/: clipboard.rs
src-tauri/src-legacy/infrastructure/event/: mod.rs
src-tauri/src-legacy/infrastructure/p2p/: codec.rs  transport.rs
src-tauri/src-legacy/infrastructure/runtime/: mod.rs  p2p_runtime.rs
src-tauri/src-legacy/infrastructure/security/: encryption.rs  password.rs  unified_encryption.rs
src-tauri/src-legacy/infrastructure/storage/: file_storage.rs
src-tauri/src-legacy/infrastructure/sync/: libp2p_sync.rs  mod.rs
src-tauri/src-legacy/interface/: remote_sync_trait.rs
src-tauri/src-legacy/utils/: env.rs  helpers.rs  logging.rs  mod.rs
src-tauri/src/api/: autostart.rs  clipboard_items.rs  clipboard_record.rs  device_connection.rs  encryption.rs  event.rs  mod.rs  onboarding.rs  p2p.rs  setting.rs  vault.rs
src-tauri/src/application/: clipboard_content_receiver_service.rs  clipboard_service.rs  device_service.rs  download_decision_service.rs  file_service.rs  mod.rs
src-tauri/src/clipboard/: clipboard.rs  local.rs
src-tauri/src/config/: mod.rs  setting.rs  utils.rs
src-tauri/src/core/: builder.rs  clipboard_content_receiver.rs  clipboard_metadata.rs  content_detector.rs  content_type.rs  context.rs  download_decision.rs  event_bus.rs  metadata.rs  metadata_models.rs  mod.rs  transfer.rs  transfer_message.rs  uniclipboard.rs
src-tauri/src/db/dao/: clipboard_record.rs  mod.rs
src-tauri/src/domain/: clipboard_metadata.rs  content_type.rs  device.rs  mod.rs  network.rs  pairing.rs  transfer_message.rs
src-tauri/src/infrastructure/: mod.rs  uniclipboard.rs
src-tauri/src/infrastructure/clipboard/: clipboard.rs  local.rs  mod.rs  traits.rs
src-tauri/src/infrastructure/connection/: connection_manager.rs  incoming_manager.rs  (+4 more)
src-tauri/src/interface/: local_clipboard_trait.rs  mod.rs  remote_sync_trait.rs
src-tauri/src/models/: clipboard.rs  clipboard_record.rs  device.rs  mod.rs  network.rs  p2p.rs
src-tauri/src/network/: websocket.rs
src-tauri/src/plugins/: mac_rounded_corners.rs  mod.rs
src-tauri/src/remote_sync/: manager.rs  webdav_sync.rs  websocket_sync.rs
src-tauri/src/services/: app_services.rs  mod.rs
src-tauri/src/utils/: helpers.rs  logging.rs  mod.rs
src-tauri/tests/: async_tests.rs
(+938 files in other folders)
