[package]
name = "uc-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core domain models
uc-core = { path = "../uc-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"

[dev-dependencies]
mockall = "0.13"
