[package]
name = "uc-clipboard-probe"
version = "0.1.0"
edition = "2021"
description = "Clipboard probing and snapshot tool for UniClipboard"

[[bin]]
name = "clipboard-probe"
path = "src/main.rs"

[dependencies]
# Workspace crates
uc-core = { path = "../uc-core" }
uc-platform = { path = "../uc-platform" }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Serialization
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Clipboard
clipboard-rs = { version = "0.3", features = ["default"] }
