[package]
name = "uc-network"
version = "0.1.0"
edition = "2021"

[dependencies]
# ===== Workspace crates =====
uc-core = { path = "../uc-core" }

# ===== libp2p P2P network =====
libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "yamux", "mdns", "request-response", "identify", "macros", "quic", "ping"] }
libp2p-stream = { version = "0.4.0-alpha" }

# ===== Serialization =====
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
serde_json = "1"
hex = "0.4"
anyhow = "1"

# ===== Async runtime =====
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# ===== Crypto =====
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
blake3 = "1.5"
argon2 = "0.5"
subtle = "2"

# ===== Logging =====
log = "0.4"

# ===== Time =====
chrono = { version = "0.4", features = ["serde"] }

# ===== Utilities =====
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
