[package]
name = "uc-platform"
version = "0.1.0"
edition = "2021"
description = "Platform-specific implementations for UniClipboard (clipboard, security, storage)"

[dependencies]
# Workspace crates
uc-core = { path = "../uc-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
subtle = "2.5"

# Password hashing
argon2 = "0.5"

# Clipboard
clipboard-rs = "0.2"
arboard = "3.4"

# Image handling
image = "0.25"
png = "0.17"

# File system
dirs = "6.0"

# UUID
uuid = { version = "1", features = ["v4", "fast-rng"] }

# Random number generation
rand = "0.9"

# Byte handling
bytes = "1.7"

# Utilities
once_cell = "1.19"

keyring = { version= "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"]  }
thiserror = "2.0.17"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4" }
winapi = { version = "0.3", features = [
    "winuser",
    "basetsd",
    "minwindef",
    "winbase",
] }
