[package]
name = "uc-platform"
version = "0.1.0"
edition = "2021"
description = "Platform-specific implementations for UniClipboard (clipboard, security, storage)"

[dependencies]
# Workspace crates
uc-core = { path = "../uc-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Networking
libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "yamux", "mdns", "identify", "macros"] }

# Encryption
sha2 = "0.10"
base64 = "0.22"
subtle = "2.5"

# Clipboard
clipboard-rs = { version = "0.3", features = ["default"] }
arboard = "3.4"

# Image handling
image = "0.25"
png = "0.18"

# File system
dirs = "6.0"

# UUID
uuid = { version = "1", features = ["v4", "fast-rng"] }

# Random number generation
rand = "0.9"

# Byte handling
bytes = "1.7"

# Utilities
once_cell = "1.19"
keyring = { version = "3.6.3", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
] }
libp2p = { version = "0.56", features = [
  "tokio",
  "tcp",
  "noise",
  "yamux",
  "mdns",
  "gossipsub",
  "request-response",
  "identify",
  "macros",
  "quic",
  "ping",
] }
thiserror = "2.0.17"
iota_stronghold = "2.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4" }
winapi = { version = "0.3", features = [
  "winuser",
  "basetsd",
  "minwindef",
  "winbase",
] }
