[package]
name = "uc-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri integration layer for UniClipboard"

[dependencies]
# Workspace crates
uc-core = { path = "../uc-core" }
uc-app = { path = "../uc-app" }
uc-network = { path = "../uc-network" }
uc-platform = { path = "../uc-platform" }

# Tauri
tauri = { version = "2", features = [] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "fast-rng"] }

# Tauri plugins
tauri-plugin-stronghold = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
